# special-disco

./: .gitignore  .pre-commit-config.yaml  FDA-Circular-No.-2017-003.md  README.md  hello.py  lf-20260205-0155.md  pyproject.toml
configs/: triage.yaml
skills/python-project-standards/: SKILL.md
skills/python-project-standards/agents/: openai.yaml
skills/python-project-standards/references/: fake-driven-testing.md
src/doc_parsing/: __init__.py  cli.py
src/doc_parsing/application/: __init__.py  config_resolver.py  logging.py  triage_config_resolver.py  use_cases.py
src/doc_parsing/domain/: __init__.py  entities.py  ports.py  value_objects.py
src/doc_parsing/infrastructure/: __init__.py
src/doc_parsing/infrastructure/parsers/: docling.py  docling_adapter.py  docling_config.py  docling_lazy.py  entrypoints.py  mock.py  mock_adapter.py  registration.py  registry.py
src/doc_parsing/infrastructure/triage/: __init__.py  entrypoints.py  pypdf_inspector.py  registration.py  registry.py  rules_policy.py
tests/application/: test_config_resolver.py  test_logging.py  test_parse_pdf_to_markdown.py  test_triage_config_resolver.py  test_triage_pdf.py
tests/cli/: test_cli_config.py  test_cli_startup.py  test_triage_cli.py
tests/domain/: test_entities.py
tests/infrastructure/: test_entrypoints.py  test_parser_registry.py  test_rules_policy.py
tests/perf/: test_cli_startup.py
